# reverse-todo

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  de7db2213d2b_initial.py
backend/src/reverse_todo/: __init__.py  config.py  main.py
backend/src/reverse_todo/api/: deps.py  mappers.py
backend/src/reverse_todo/api/routers/: auth.py  catalog.py  entries.py  reports.py
backend/src/reverse_todo/api/schemas/: __init__.py
backend/src/reverse_todo/application/auth/: use_cases.py
backend/src/reverse_todo/application/catalog/: use_cases.py
backend/src/reverse_todo/application/classification/: context.py
backend/src/reverse_todo/application/entries/: create_entry.py  delete_entry.py  update_entry.py
backend/src/reverse_todo/application/reports/: today.py  weekly.py
backend/src/reverse_todo/domain/: __init__.py  errors.py
backend/src/reverse_todo/domain/entities/: __init__.py
backend/src/reverse_todo/domain/ports/: classification.py
backend/src/reverse_todo/domain/repositories/: __init__.py
backend/src/reverse_todo/domain/value_objects/: __init__.py  category.py  entry_date.py  source.py
backend/src/reverse_todo/infrastructure/: di.py
backend/src/reverse_todo/infrastructure/auth/: tokens.py
backend/tests/: conftest.py  fakes.py
backend/tests/api/: test_entries.py  test_login_timezone.py
backend/tests/integration/repositories/: test_entry_repository.py
backend/tests/unit/application/: test_auth.py  test_create_entry.py
backend/tests/unit/infrastructure/: test_classification_port.py  test_mappers.py  test_rule_classifier.py  test_telegram.py  test_tokens.py
(+64 files in other folders)
